SNTP ans night mode

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,5 +1,9 @@
 cmake_minimum_required(VERSION 3.19)
-idf_component_register(SRCS "app_main.c" "sound.c" "wifi.c" "alert_api.c"
+idf_component_register(SRCS "app_main.c"
+                            "sound.c"
+                            "wifi.c"
+                            "alert_api.c"
+                            "sntp_time.c"
                     INCLUDE_DIRS ".")
 
 spiffs_create_partition_image(storage ../spiffs FLASH_IN_PROJECT)
