--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.19)
-idf_component_register(SRCS "app_main.c" "sound.c" "wifi.c" "alert_api.c" "sntp_time.c" "version.h" "ota.c" "ota_https_ssl.h"
+idf_component_register(SRCS "app_main.c" "sound.c" "wifi.c" "alert_api.c" "sntp_time.c" "version.h" "ota.c" "ota_https_ssl.h" "led_pattern.c"
                     INCLUDE_DIRS ".")
 
 spiffs_create_partition_image(storage ../spiffs FLASH_IN_PROJECT)
